# wesola-lapka-remake

./: README.md  pyproject.toml
config/: settings.py
core/: models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/static/core/css/: style.css
templates/core/: home.html
